// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal snapshot: closed 1`] = `
<AlertModal
  className="confirm-modal"
  footerNode={
    <ActionRow>
      <Button
        onClick={[MockFunction this.props.onCancel]}
        variant="tertiary"
      >
        test-cancel-text
      </Button>
      <Button
        onClick={[MockFunction this.props.onConfirm]}
        variant="primary"
      >
        test-confirm-text
      </Button>
    </ActionRow>
  }
  isOpen={false}
  onClose={[MockFunction hooks.nullMethod]}
  title="test-title"
>
  <p>
    test-content
  </p>
</AlertModal>
`;

exports[`ConfirmModal snapshot: open 1`] = `
<AlertModal
  className="confirm-modal"
  footerNode={
    <ActionRow>
      <Button
        onClick={[MockFunction this.props.onCancel]}
        variant="tertiary"
      >
        test-cancel-text
      </Button>
      <Button
        onClick={[MockFunction this.props.onConfirm]}
        variant="primary"
      >
        test-confirm-text
      </Button>
    </ActionRow>
  }
  isOpen={true}
  onClose={[MockFunction hooks.nullMethod]}
  title="test-title"
>
  <p>
    test-content
  </p>
</AlertModal>
`;
